--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.4.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OL-gag/Hopge-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/OL-gag/Hopge-server/issues"
+  },
+  "homepage": "https://github.com/OL-gag/Hopge-server#readme"
 }
