--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Server for Hockey Practice Generator - HoPGe",
   "main": "index.js",
-    "scripts": {
+  "scripts": {
     "create-dev-tables": "babel-node ./db/dev/dbConnection createAllTables",
     "start": "nodemon --watch . --exec babel-node -- server",
     "setup": "npm-run-all -p start create-dev-tables"
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "make-runnable": "^1.3.8",
     "moment": "^2.29.1",
