--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "scripts": {
     "create-dev-tables": "babel-node ./db/dev/dbConnection createAllTables",
     "start": "nodemon --watch . --exec babel-node -- server",
-    "setup": "npm-run-all -p start create-dev-tables"
+    "setup": "npm-run-all -p start create-dev-tables",
+    "debug": "nodemon --inspect ./bin/www"
   },
   "author": "o. gagne",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.11.5",
+    "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
+    "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "make-runnable": "^1.3.8",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
-    "pg": "^8.4.1"
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/OL-gag/Hopge-server/issues"
   },
-  "homepage": "https://github.com/OL-gag/Hopge-server#readme"
+  "homepage": "https://github.com/OL-gag/Hopge-server#readme",
+  "directories": {
+    "test": "tests"
+  }
 }
