--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.8.0",
+    "html-react-parser": "^1.2.4",
     "jsonwebtoken": "^8.5.1",
     "make-runnable": "^1.3.8",
     "moment": "^2.29.1",
